--- a/Nyxapi-server/requirements.txt
+++ b/Nyxapi-server/requirements.txt
@@ -1,14 +1,28 @@
+aerich==0.7.2
+aiosqlite==0.17.0
+alembic==1.13.3
 annotated-types==0.7.0
 anyio==4.6.0
+atlastk==0.13.3
 click==8.1.7
+dictdiffer==0.9.0
 fastapi==0.115.0
 h11==0.14.0
 idna==3.10
+iso8601==1.1.0
+Mako==1.3.5
+MarkupSafe==2.1.5
+psycopg2==2.9.9
 psycopg2-binary==2.9.9
 pydantic==2.9.2
 pydantic_core==2.23.4
+pypika-tortoise==0.1.6
+python-dotenv==1.0.1
+pytz==2024.2
 sniffio==1.3.1
 SQLAlchemy==2.0.35
 starlette==0.38.6
+tomlkit==0.13.2
+tortoise-orm==0.21.6
 typing_extensions==4.12.2
 uvicorn==0.31.0
