--- a/Nyxapi-server/requirements.txt
+++ b/Nyxapi-server/requirements.txt
@@ -3,6 +3,7 @@ aiosqlite==0.17.0
 alembic==1.13.3
 annotated-types==0.7.0
 anyio==4.6.0
+asyncpg==0.29.0
 atlastk==0.13.3
 click==8.1.7
 dictdiffer==0.9.0
@@ -12,7 +13,6 @@ idna==3.10
 iso8601==1.1.0
 Mako==1.3.5
 MarkupSafe==2.1.5
-psycopg2==2.9.9
 psycopg2-binary==2.9.9
 pydantic==2.9.2
 pydantic_core==2.23.4
