--- a/Nyxapi-server/requirements.txt
+++ b/Nyxapi-server/requirements.txt
@@ -22,12 +22,14 @@ bs4==0.0.2
 build==1.2.1
 cachetools==5.4.0
 certifi==2024.7.4
+cffi==1.17.1
 charset-normalizer==3.3.2
 chroma-hnswlib==0.7.5
 chromadb==0.5.4
 click==8.1.7
 coloredlogs==15.0.1
 comm==0.2.2
+cryptography==43.0.1
 dataclasses-json==0.6.7
 debugpy==1.8.2
 decorator==4.4.2
@@ -123,6 +125,7 @@ ptyprocess==0.7.0
 pure_eval==0.2.3
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
+pycparser==2.22
 pycryptodomex==3.20.0
 pydantic==1.10.2
 pydantic-settings==2.3.4
