--- a/Nyxapi-front/package.json
+++ b/Nyxapi-front/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@lottiefiles/react-lottie-player": "^3.5.4",
+    "axios": "^1.7.7",
     "hamburger-react": "^2.5.1",
     "lottie-react": "^2.4.0",
     "react": "^18.3.1",
