--- a/Nyxapi-front/package.json
+++ b/Nyxapi-front/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@lottiefiles/react-lottie-player": "^3.5.4",
+    "@ramonak/react-progress-bar": "^5.3.0",
     "axios": "^1.7.7",
     "hamburger-react": "^2.5.1",
     "lottie-react": "^2.4.0",
     "react": "^18.3.1",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2"
