--- a/Nyxapi-front/package.json
+++ b/Nyxapi-front/package.json
@@ -19,7 +19,9 @@
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.26.2"
+    "react-loader-spinner": "^6.1.6",
+    "react-router-dom": "^6.26.2",
+    "react-spinners": "^0.14.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
