Updated User CRUD

--- a/Nyxapi-front/package.json
+++ b/Nyxapi-front/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@lottiefiles/react-lottie-player": "^3.5.4",
     "@ramonak/react-progress-bar": "^5.3.0",
+    "appwrite": "^16.0.2",
     "axios": "^1.7.7",
     "hamburger-react": "^2.5.1",
     "lottie-react": "^2.4.0",
