--- a/Nyxapi-front/.env
+++ b/Nyxapi-front/.env
@@ -1,3 +1,5 @@
 REACT_APP_APPWRITE_ENDPOINT=https://cloud.appwrite.io/v1
 REACT_APP_APPWRITE_PROJECT_ID=6701847e00238051af38
 REACT_APP_APPWRITE_BUCKET_ID=67149cce000047ac5262
+CLIENTSERVER=nyxapi.com
+SERVER=afmtaryv91.execute-api.ap-south-1.amazonaws.com
