--- a/Server/.env
+++ b/Server/.env
@@ -1,5 +1,6 @@
-DB_USER=neondb_owner
-DB_PASSWORD=sZ2uNCIlE8MA
-DB_HOST=ep-royal-art-a1o7c6ko.ap-southeast-1.aws.neon.tech
-DB_NAME=neondb
+# Database Configuration
+DB_USER=your_database_user
+DB_PASSWORD=your_database_password
+DB_HOST=your_database_host
+DB_NAME=your_database_name
 DB_SSLMODE=require
