--- a/Nyxapi-front/package.json
+++ b/Nyxapi-front/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.7",
     "hamburger-react": "^2.5.1",
     "lottie-react": "^2.4.0",
+    "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
