--- a/Nyxapi-server/requirements.txt
+++ b/Nyxapi-server/requirements.txt
@@ -1,186 +1,10 @@
-aiofiles==24.1.0
-aiohttp==3.9.5
-aiosignal==1.3.1
-alembic==1.13.2
-annotated-types==0.7.0
-anyio==4.4.0
-appnope==0.1.4
-appwrite==6.1.0
-asgiref==3.8.1
-asttokens==2.4.1
-async-timeout==4.0.3
-asyncpg==0.29.0
-attrs==23.2.0
-autoscraper @ git+https://github.com/alirezamika/autoscraper.git@26bc6bf78a14753f5dca6856999d96d5374dc64d
-backoff==2.2.1
-bcrypt==4.1.3
-beautifulsoup4==4.12.3
-boto3==1.34.145
-botocore==1.34.145
-Brotli==1.1.0
-bs4==0.0.2
-build==1.2.1
-cachetools==5.4.0
-certifi==2024.7.4
-cffi==1.17.1
-charset-normalizer==3.3.2
-chroma-hnswlib==0.7.5
-chromadb==0.5.4
-click==8.1.7
-coloredlogs==15.0.1
-comm==0.2.2
-cryptography==43.0.1
-dataclasses-json==0.6.7
-debugpy==1.8.2
-decorator==4.4.2
-Deprecated==1.2.14
-dnspython==2.6.1
-ecdsa==0.19.0
-email_validator==2.2.0
-executing==2.0.1
-fastapi==0.111.1
-fastapi-cli==0.0.4
-filelock==3.15.4
-flatbuffers==24.3.25
-frozenlist==1.4.1
-fsspec==2024.6.1
-google-auth==2.32.0
-googleapis-common-protos==1.63.2
-greenlet==3.1.0
-grpcio==1.65.1
-h11==0.14.0
-httpcore==1.0.5
-httptools==0.6.1
-httpx==0.27.0
-huggingface-hub==0.24.0
-humanfriendly==10.0
-idna==3.7
-imageio==2.35.1
-imageio-ffmpeg==0.5.1
-importlib_metadata==7.1.0
-importlib_resources==6.4.0
-ipykernel==6.29.5
-ipython==8.26.0
-jedi==0.19.1
-Jinja2==3.1.4
-jmespath==1.0.1
-jose==1.0.0
-jsonpatch==1.33
-jsonpointer==3.0.0
-jupyter_client==8.6.2
-jupyter_core==5.7.2
-kubernetes==30.1.0
-langchain==0.2.10
-langchain-community==0.2.10
-langchain-core==0.2.23
-langchain-text-splitters==0.2.2
-langsmith==0.1.93
-lxml==5.3.0
-Mako==1.3.5
-mangum==0.17.0
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-marshmallow==3.21.3
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-mmh3==4.1.0
-monotonic==1.6
-motor==3.5.1
-moviepy==1.0.3
-mpmath==1.3.0
-multidict==6.0.5
-mutagen==1.47.0
-mypy-extensions==1.0.0
-nest-asyncio==1.6.0
-networkx==3.3
-numpy==1.26.4
-oauthlib==3.2.2
-onnxruntime==1.18.1
-opentelemetry-api==1.25.0
-opentelemetry-exporter-otlp-proto-common==1.25.0
-opentelemetry-exporter-otlp-proto-grpc==1.25.0
-opentelemetry-instrumentation==0.46b0
-opentelemetry-instrumentation-asgi==0.46b0
-opentelemetry-instrumentation-fastapi==0.46b0
-opentelemetry-proto==1.25.0
-opentelemetry-sdk==1.25.0
-opentelemetry-semantic-conventions==0.46b0
-opentelemetry-util-http==0.46b0
-orjson==3.10.6
-overrides==7.7.0
-packaging==24.1
-pandas==2.2.2
-parso==0.8.4
-passlib==1.7.4
-pexpect==4.9.0
-pillow==10.4.0
-platformdirs==4.2.2
-posthog==3.5.0
-proglog==0.1.10
-prompt_toolkit==3.0.47
-protobuf==4.25.3
-psutil==6.0.0
-psycopg2-binary==2.9.9
-ptyprocess==0.7.0
-pure_eval==0.2.3
-pyasn1==0.6.0
-pyasn1_modules==0.4.0
-pycparser==2.22
-pycryptodomex==3.20.0
-pydantic==1.10.2
-pydantic-settings==2.3.4
-pydantic_core==2.20.1
-pydub==0.25.1
-Pygments==2.18.0
-PyJWT==2.9.0
-pymongo==4.8.0
-pypdf==4.3.1
-PyPika==0.48.9
-pyproject_hooks==1.1.0
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-python-jose==3.3.0
-python-multipart==0.0.9
-pytube==15.0.0
-pytz==2024.2
-PyYAML==6.0.1
-pyzmq==26.0.3
-regex==2024.9.11
-requests==2.32.3
-requests-oauthlib==2.0.0
-rich==13.7.1
-rsa==4.9
-s3transfer==0.10.2
-safetensors==0.4.5
-sentencepiece==0.2.0
-shellingham==1.5.4
-six==1.16.0
-sniffio==1.3.1
-soupsieve==2.6
-SpeechRecognition==3.10.4
-SQLAlchemy==2.0.34
-stack-data==0.6.3
-starlette==0.37.2
-sympy==1.13.1
-tenacity==8.5.0
-tokenizers==0.19.1
-torch==2.4.1
-tornado==6.4.1
-tqdm==4.66.4
-traitlets==5.14.3
-transformers==4.44.2
-typer==0.12.3
-typing-inspect==0.9.0
-typing_extensions==4.12.2
-tzdata==2024.1
-urllib3==2.2.2
-uvicorn==0.30.3
-uvloop==0.19.0
-watchfiles==0.22.0
-wcwidth==0.2.13
-websocket-client==1.8.0
-websockets==12.0
-wrapt==1.16.0
-yarl==1.9.4
-yt-dlp==2024.8.6
-zipp==3.19.2
+fastapi
+uvicorn
+sqlalchemy
+python-jose[cryptography]
+passlib[bcrypt]
+python-multipart
+python-dotenv
+sqlalchemy[asyncio]
+pymysql
+websockets
